--- a/pcrmgmtAPP/templates/base.html
+++ b/pcrmgmtAPP/templates/base.html
@@ -108,7 +108,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>&copy; {% now "Y" %} PCR Management. Fluff you</p>
+    <p>&copy; {% now "Y" %} ...all your base are belong to us... (╯°□°)╯︵ ɹoɹɹƎ</p>
   </footer>
 
   <!-- Bootstrap JS Bundle -->
